--- a/BusinessSystem-App/resources/css/app.css
+++ b/BusinessSystem-App/resources/css/app.css
@@ -5,6 +5,10 @@
 @source '../views';
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 
+
+@plugin "daisyui";
+
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
